--- a/views/graph.tt
+++ b/views/graph.tt
@@ -28,6 +28,7 @@
                     [% FOREACH column IN layout.all %]
                         <option value="[% column.id %]" [% IF graph.x_axis == column.id %]selected[% END %]>[% column.name %]</option>
                     [% END %]
+                    <option value="" [% IF NOT graph.x_axis %]selected[% END %]>&lt;All fields in view&gt;</option>
                 </select>
             </div>
             <div class="form-group">
