--- a/views/graph.tt
+++ b/views/graph.tt
@@ -71,6 +71,15 @@
                 </select>
             </div>
             <div class="form-group">
+                <label for="email">Plot against metrics (optional):</label>
+                <select class="form-control" name="metric_group_id">
+                    <option value="" [% UNLESS graph.metric_group_id %]selected[% END %]></option>
+                    [% FOREACH metric_group IN metric_groups %]
+                        <option value="[% metric_group.id %]" [% IF graph.metric_group_id == metric_group.id %]selected[% END %]>[% metric_group.name %]</option>
+                    [% END %]
+                </select>
+            </div>
+            <div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" name="stackseries" value="1" [% IF graph.stackseries %]checked[% END %]>Stack data within same series
