--- a/views/view.tt
+++ b/views/view.tt
@@ -99,6 +99,10 @@
                     </div>
                     <div class="modal-body">
                         <p>Are you sure you want to delete this view?</p>
+                        [% IF v.alert %]
+                            <p>Please note that you will no longer receive the alerts that
+                            are configured for this view.</p>
+                        [% END %]
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
