Stop graphs page-breaking on print

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -102,3 +102,10 @@ table.floatThead-table {
     background-color: #FFF;
 }
 
+@media print
+{
+    div{
+        page-break-inside: avoid;
+    }
+}
+
