--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -4,10 +4,12 @@
     [% count = 0 %]
     [% FOREACH graph IN graphs %]
         [% NEXT UNLESS graph.selected %]
-        <h3>[% graph.title %]</h3>
-        [% IF graph.description %]<p>[% graph.description %]</p>[% END %]
-        <div id="chartdiv[% graph.id %]" style="height:400px;width:600px; "></div>
-        <p><a href="?png=[% graph.id %]">PNG</a> | <a href="?csv=[% graph.id %]">CSV</a></p>
+        <div>
+            <h3>[% graph.title %]</h3>
+            [% IF graph.description %]<p>[% graph.description %]</p>[% END %]
+            <div id="chartdiv[% graph.id %]" style="height:400px;width:600px; "></div>
+            <p><a href="?png=[% graph.id %]">PNG</a> | <a href="?csv=[% graph.id %]">CSV</a></p>
+        </div>
         [% count = count + 1 %]
     [% END %]
 
