--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -164,6 +164,7 @@
             </script>
         [% END %]
         [% IF page == "login" %]
+            <script type="text/javascript" src="[% url.js %]/bootstrap-show-password.js"></script>
             <script type="text/javascript" src="[% url.js %]/login.js"></script>
         [% END %]
         [% IF page == "data" AND viewtype == "graph" %]
