--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -112,6 +112,10 @@
                                 <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">[% user.value %]<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
+                                    [% FOREACH instance IN instances %]
+                                        <li><a href="?instance=[% instance.id %]">[% instance.name %]</a></li>
+                                    [% END %]
+                                    <li class="divider"></li>
                                     <li><a href="[% url.page %]/account/detail">My details</a></li>
                                     <li><a href="[% url.page %]/account/graph">My graphs</a></li>
                                     <li class="divider"></li>
