Initial linked records functionality

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -81,6 +81,8 @@
     [% NEXT IF page == "approval" AND NOT (record.fields.$colid.has_value)  %]
     [%# Skip if it's a related record and the value doesn't exist %]
     [% NEXT IF record.parent_id AND NOT (record.fields.$colid.has_value) AND NOT user.permission.create_related %]
+    [%# Skip if it's a linked record and the value is linked %]
+    [% NEXT IF record.linked_id AND dispcol.link_parent %]
 
     [% IF existing %]
         [% oldvalue = existing.fields.$colid.html %] [%# All value already entity-encoded %]
