--- a/views/data.tt
+++ b/views/data.tt
@@ -64,6 +64,11 @@
                         <a href="/edit/" class="btn btn-default" role="button">New record</a>
                     </div>
                 [% END %]
+                [% IF user.permission.link %]
+                    <div class="btn-group">
+                        <a href="/link/" class="btn btn-default" role="button">New linked record</a>
+                    </div>
+                [% END %]
                 [% IF viewtype == "table" AND records.size AND user.permission.download %]
                     <div class="btn-group">
                         <a href="/data?download" class="btn btn-default" role="button">Download</a>
