--- a/views/layout.tt
+++ b/views/layout.tt
@@ -34,6 +34,17 @@
                 <input type="text" class="form-control" id="description" name="description" value="[% column.description | html_entity %]">
             </div>
             <div class="form-group">
+                <label for="link_parent_id">Linked to:</label>
+                <select class="form-control" id="link_parent_id" name="link_parent_id">
+                    <option value="">&lt;Not linked&gt;</option>
+                    [% FOREACH l IN instance_layouts %]
+                        [% FOREACH c IN l.all %]
+                            <option value="[% c.id %]" [% IF column.link_parent_id == c.id %]selected[% END %]>[% l.name %] - [% c.name %]</option>
+                        [% END %]
+                    [% END %]
+                </select>
+            </div>
+            <div class="form-group">
                 <label for="helptext">User help text:</label>
                 <textarea class="form-control" rows="5" id="helptext" name="helptext">[% column.helptext | html_entity %]</textarea>
             </div>
