--- a/views/data.tt
+++ b/views/data.tt
@@ -120,7 +120,7 @@
                 <form role="form" method="post">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Configure alert for [% v.name %]</h4>
+                    <h4 class="modal-title" id="myModalLabel">Configure alert for [% v.name | html_entity %]</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
