--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1,4 +1,47 @@
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
+
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 300;
+  font-style: normal;
+  src: url('/fonts/Open-Sans-300.eot');
+  src: url('/fonts/Open-Sans-300.eot?#iefix') format('embedded-opentype'),
+       local('Open Sans Light'),
+       local('Open-Sans-300'),
+       url('/fonts/Open-Sans-300.woff2') format('woff2'),
+       url('/fonts/Open-Sans-300.woff') format('woff'),
+       url('/fonts/Open-Sans-300.ttf') format('truetype'),
+       url('/fonts/Open-Sans-300.svg#OpenSans') format('svg');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 400;
+  font-style: normal;
+  src: url('/fonts/Open-Sans-regular.eot');
+  src: url('/fonts/Open-Sans-regular.eot?#iefix') format('embedded-opentype'),
+       local('Open Sans'),
+       local('Open-Sans-regular'),
+       url('/fonts/Open-Sans-regular.woff2') format('woff2'),
+       url('/fonts/Open-Sans-regular.woff') format('woff'),
+       url('/fonts/Open-Sans-regular.ttf') format('truetype'),
+       url('/fonts/Open-Sans-regular.svg#OpenSans') format('svg');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 700;
+  font-style: normal;
+  src: url('/fonts/Open-Sans-700.eot');
+  src: url('/fonts/Open-Sans-700.eot?#iefix') format('embedded-opentype'),
+       local('Open Sans Bold'),
+       local('Open-Sans-700'),
+       url('/fonts/Open-Sans-700.woff2') format('woff2'),
+       url('/fonts/Open-Sans-700.woff') format('woff'),
+       url('/fonts/Open-Sans-700.ttf') format('truetype'),
+       url('/fonts/Open-Sans-700.svg#OpenSans') format('svg');
+}
+
 html {
   font-family: 'Open Sans',sans-serif;
 }
